[package]
name = "jump-jump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
# see https://github.com/djeedai/bevy_hanabi/issues/128
bevy_hanabi = {git = "https://github.com/djeedai/bevy_hanabi", branch = "main"}
rand = "0.8.0"